--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
       "import/prefer-default-export": "off",
+      "no-useless-constructor": "off",
       "prettier/prettier": "error",
       "import/extensions": [
         "error",
