--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "start": "ts-node src/index.ts"
    },
    "devDependencies": {
+      "@types/cors": "^2.8.9",
       "@types/express": "^4.17.11",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^4.13.0",
@@ -28,6 +29,7 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "pg": "^8.5.1",
