--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "express-async-errors": "^3.1.1",
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.30"
+      "typeorm": "0.2.30",
+      "yup": "^0.32.8"
    }
 }
